--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>vtsuru.live</title>
-    <meta name="description" content="主包工具站" />
+    <meta name="description" content="为主播提供便利功能的网站" />
+
+    <script async src="https://umami.vtsuru.live/script.js" data-website-id="05567214-d234-4076-9228-e4d69e3d202f"></script>
   </head>
 
   <body>
