--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <title>vtsuru.live</title>
-    <meta name="description" content="主包工具站" />
+    <meta name="description" content="为主播提供便利功能" />
+    <script async src="https://umami.vtsuru.live/script.js" data-website-id="05567214-d234-4076-9228-e4d69e3d202f"></script>
   </head>
 
   <body>
     <noscript>
       <strong>
-        We're sorry but Vtsuru,live doesn't work properly without JavaScript
+        We're sorry but Vtsuru.live doesn't work properly without JavaScript
         enabled. Please enable it to continue.
       </strong>
     </noscript>
