--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <title>vtsuru.live</title>
     <meta name="description" content="为主播提供便利功能" />
-    <script async src="https://umami.vtsuru.live/script.js" data-website-id="05567214-d234-4076-9228-e4d69e3d202f"></script>
+    <script
+      async
+      src="https://umami.vtsuru.live/script.js"
+      data-website-id="05567214-d234-4076-9228-e4d69e3d202f"
+    ></script>
   </head>
 
   <body>
@@ -19,5 +23,11 @@
     </noscript>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+
+    <script>
+      document.body.clientWidth < 700
+        ? (document.getElementById('afdian_leaflet_vtsuru').width = '100%')
+        : (document.getElementById('afdian_leaflet_vtsuru').width = '640')
+    </script>
   </body>
 </html>
