--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="preconnect" href="https://rsms.me/" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <script src="https://unpkg.com/peerjs@latest/dist/peerjs.min.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/peerjs@latest/dist/peerjs.min.js"></script>
   </head>
 
   <body>
