chore: update analytics endpoint and refine song list template styles

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="为主播提供便利功能" />
     <script
       async
-      src="https://umami.vtsuru.live/script.js"
+      src="https://analytics.suki.club/script.js"
       data-website-id="05567214-d234-4076-9228-e4d69e3d202f"
     ></script>
 
